--- a/package.json
+++ b/package.json
@@ -15,7 +15,6 @@
     "gulp-postcss": "9.0.1",
     "gulp-rename": "^2.0.0",
     "gulp-svgmin": "^4.1.0",
-    "gulp-svgstore": "^9.0.0",
     "gulp-terser": "^2.1.0",
     "postcss": "8.3.11",
     "postcss-csso": "^6.0.1",
@@ -26,7 +25,7 @@
     "editorconfig": "editorconfig-cli",
     "stylelint": "stylelint \"source/sass/**/*.scss\" --syntax scss",
     "lint": "npm run editorconfig && npm run stylelint",
-    "build": "gulp styles",
+    "build": "gulp build",
     "start": "gulp"
   },
   "browserslist": [
