--- a/package.json
+++ b/package.json
@@ -8,12 +8,15 @@
     "browser-sync": "2.27.7",
     "del": "6.0.0",
     "gulp": "4.0.2",
+    "gulp-cheerio": "^1.0.0",
     "gulp-dart-sass": "^1.0.2",
     "gulp-htmlmin": "^5.0.1",
     "gulp-libsquoosh": "^1.1.2",
     "gulp-plumber": "1.2.1",
     "gulp-postcss": "9.0.1",
+    "gulp-rename": "2.0.0",
     "gulp-svgmin": "^4.1.0",
+    "gulp-svgstore": "8.0.0",
     "gulp-terser": "^2.1.0",
     "postcss": "8.3.11",
     "stylelint": "13.13.1",
