--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -22,7 +22,10 @@ jobs:
           persist-credentials: false
 
       - name: Install dependencies
-        run: npm ci
+        run: npm i
+
+      - name: Run checks
+        run: npm run lint
 
       - name: Build project
         run: npm run build
