--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "autoprefixer": "10.4.0",
     "browser-sync": "2.27.7",
     "del": "6.0.0",
+    "gh-pages": "^4.0.0",
     "gulp": "4.0.2",
     "gulp-cheerio": "^1.0.0",
     "gulp-dart-sass": "^1.0.2",
@@ -27,7 +28,9 @@
     "stylelint": "stylelint \"source/sass/**/*.scss\" --syntax scss",
     "lint": "npm run editorconfig && npm run stylelint",
     "build": "gulp build",
-    "start": "gulp"
+    "start": "gulp",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "browserslist": [
     "last 2 versions",
