--- a/package.json
+++ b/package.json
@@ -7,7 +7,6 @@
     "autoprefixer": "10.4.0",
     "browser-sync": "2.27.7",
     "del": "6.0.0",
-    "gh-pages": "^4.0.0",
     "gulp": "4.0.2",
     "gulp-cheerio": "^1.0.0",
     "gulp-dart-sass": "^1.0.2",
@@ -28,9 +27,7 @@
     "stylelint": "stylelint \"source/sass/**/*.scss\" --syntax scss",
     "lint": "npm run editorconfig && npm run stylelint",
     "build": "gulp build",
-    "start": "gulp",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
+    "start": "gulp"
   },
   "browserslist": [
     "last 2 versions",
